# cauldron

./: Cargo.toml  README.md  build.rs
.github/workflows/: nightly.yml  rust.yml
scripts/: cauldron.ps1
src/: cache.rs  env_update.rs  fetch.rs  junction_setup.rs  main.rs  model.rs  unpack.rs  util.rs
src/commands/: install.rs  list.rs  mod.rs
