[package]
name = "cauldron"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cauldron"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ureq = "3.3.0"
clap = { version = "4.6.0", features = ["derive"] }
indicatif = "0.18.4"
reqwest = { version = "0.13.2", features = ["blocking"] }
anyhow = "1.0.102"
sha2 = { version = "0.11.0" }
hex = "0.4.3"
zip = "8.5.1"
junction = "1.4.2"
winreg = "0.56.0"
windows-sys = { version = "0.61.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_Foundation"] }
filetime = "0.2.27"
comfy-table = "7.2.2"

[dev-dependencies]
tempfile = "3.27.0"